# Babel

./: CMakeLists.txt  README.md  babelInstall.sh  conanfile.txt
Client/: AudioPa.cpp
Client/include/: AudioPa.hpp  Client.hpp  Functions.hpp  Package.hpp
Client/src/: Client.cpp  Package.cpp  audio.cpp  communication.cpp  input.txt  m.cpp  main.cpp
Server/: fifthgrade.ros
Server/include/: Client.hpp  Error.hpp  Functions.hpp  Package.hpp  Server.hpp  network.hpp
Server/src/: Client.cpp  Error.cpp  Package.cpp  Serialize.cpp  Server.cpp  audio.cpp  communication.cpp  main.cpp  network.cpp
